[session7] 스프링 데이터 JPA 분석